--- a/style.css
+++ b/style.css
@@ -83,3 +83,26 @@ input[type="range"]::-ms-thumb {
   display: flex;
   justify-content: space-evenly;
 }
+
+.avaliacao{
+  display: flex;
+ }
+.star-icon{
+  list-style-type: none;
+  border: 1px solid #fff;
+  cursor: pointer;
+  color: #ffe500;
+  font-size: 30px;/* alterar o tamanho das estrelas */
+}
+.star-icon::before{
+  content: "\2605";
+}
+.star-icon.ativo ~ .star-icon::before{
+  content: "\2606";
+}
+.avaliacao:hover .star-icon::before{
+  content: "\2605";
+}
+.star-icon:hover ~ .star-icon::before{
+  content: "\2606";
+}
