--- a/border.css
+++ b/border.css
@@ -13,16 +13,14 @@ body
 {
   position: relative;
   background: #131b33;
-  width: 300px;
-  height: 400px;
   overflow: hidden;
 }
-.tela span:nth-child(1)
+#player:nth-child(1)
 {
-  position:absolute; 
+  /* position:absolute; 
   top: 0;
-  left: 0; 
-  width: 100%;
+  left: 0;  */
+  /* width: 100%; */
   height: 3px;
   background: linear-gradient(to right, transparent, #17f3fd);
   animation: animate_one 2s linear infinite;
