--- a/border.css
+++ b/border.css
@@ -1,4 +1,4 @@
-*
+/* *
 {
   margin: 0;
   padding: 0;
@@ -17,10 +17,10 @@ body
 }
 #player:nth-child(1)
 {
-  /* position:absolute; 
+  position:absolute; 
   top: 0;
-  left: 0;  */
-  /* width: 100%; */
+  left: 0;  
+  width: 100%; 
   height: 3px;
   background: linear-gradient(to right, transparent, #17f3fd);
   animation: animate_one 2s linear infinite;
@@ -36,7 +36,7 @@ body
     transform: translateX(100%);
   }
 }
-.tela span:nth-child(2)
+#player:nth-child(2)
 {
   position:absolute; 
   top: 0;
@@ -58,7 +58,7 @@ body
     transform: translateY(100%);
   }
 }
-.tela span:nth-child(3)
+#player:nth-child(3)
 {
   position:absolute; 
   bottom: 0;
@@ -79,7 +79,7 @@ body
     transform: translateX(-100%);
   }
 }
-.tela span:nth-child(4)
+#player:nth-child(4)
 {
   position:absolute; 
   top: 0;
@@ -100,4 +100,4 @@ body
   {
     transform: translateY(-100%);
   }
-} 
+}  */
